--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "API para cálculos de conceptos, fenómenos, y propagaciones de estados.",
   "main": "dist/conductometria.bundle.js",
   "scripts": {
+    "up": "npm run build && npm run test && bash up.sh",
     "build": "npx simplebundler --dir src --output dist/conductometria.bundle.js --id Conductometria",
     "test": "npm run build && node test.js"
   },
