--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/conductometria.bundle.js",
   "scripts": {
     "up": "npm run build && npm run test && bash up.sh",
-    "build": "npx simplebundler --dir src --output dist/conductometria.bundle.js --id Conductometria",
+    "build": "npx simplebundler --dir src --output dist/conductometria.bundle.js --id Conductometria && cp dist/conductometria.bundle.js docs/src/external/conductometria.bundle.js",
     "test": "npm run build && node test.js"
   },
   "keywords": [],
